# red-team-harness

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: index.md
samples/: finding_1.json  finding_11.json  finding_12.json  finding_14.json  finding_16.json  finding_17.json  finding_19.json  finding_2.json  finding_22.json  finding_24.json  finding_26.json  finding_28.json  finding_29.json  finding_3.json  finding_7.json  finding_9.json
src/red_team_harness/: cli.py  config.py  exporters.py  harness.py  prompts.py  utils.py
